--- a/supsi-atc/package.json
+++ b/supsi-atc/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@auth0/angular-jwt": "^3.0.0",
     "@types/jquery": "^3.3.29",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "material-design-icons": "^3.0.1",
     "n": "^4.1.0",
     "ng2-file-upload": "^1.3.0",
