--- a/supsi-atc/package.json
+++ b/supsi-atc/package.json
@@ -26,6 +26,7 @@
     "@types/jquery": "^3.3.29",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "material-design-icons": "^3.0.1",
